# omo

./: .gitignore  CONTRIBUTING  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.yml  main.rs
