[package]
name = "omo"
description = "A complete algotrading framework written in Rust"
version = "0.1.0"
authors = ["fengkiej <fengkiejunis@gmail.com>", "elr0nda10 <https://github.com/elr0nda10>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["algotrading", "framework", "trading", "finance"]

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }